# music

./: CMakeLists.txt  main.c
assets/: MysticMelody.pptx
database/: music.db
src/: constant.h  main.c
src/components/: content.h  header_app.h  main_content.h  main_menu.c  main_menu.h  musicBar.c  musicBar.h  my_music.h  play_music_taskbar.h  searchBar.c  searchBar.css  searchBar.h  selection_menu.css  selection_menu.h  tri.c  tri.h  ts.h
src/components/properties/: log_in.css  selection_menu.css
src/config/: database_config.c  database_config.h
src/control/: main_board_control.c  main_board_control.h  sign_in_control.c  sign_in_control.h  sign_up_control.c  sign_up_control.h
src/controller/: end.h  sign_in.h  sign_out.h
src/data/: directProject.h  sign_in.h
src/database/: db_songs.h
src/db/: connectData.c  connectData.h  music.db
src/model/: album.c  album.h  connectData.h  db_signin.h  db_songs.h  directProject.h  playlist.c  playlist.h  registerUser.h  sign_in.h  song.c  song.h  songs.c  songs.h  user.c  user.h
src/models/: albums.c  albums.h  infor.c  infor.h  playlist.c  playlist.h  songs.c  songs.h  users.c  users.h
src/properties/: MyMusicCSS.css  intro.css  musicBar.css  my_music.css  selection_menu.css  sign_in.css
src/utils/: direct_pro.c  direct_pro.h
src/view/: intro.c  intro.h  intro_view.c  intro_view.h  main_board.c  main_board.h  main_board_view.c  main_board_view.h  main_menu.h  mainboard_view.c  mainboard_view.h  sample.h  searchBar.c  searchBar.h  sign_in.c  sign_in.h  sign_in_view.c  sign_in_view.h  sign_up.c  sign_up.h  sign_up_view.c  sign_up_view.h  signin_view.c  signin_view.h  signup_view.c  signup_view.h  start_screen.h  style.css  ui_init.c  ui_init.h
src/view/components/: add_playlist.c  add_playlist.h  menu.c  menu.h  music_bar.c  music_bar.h  musicbar.c  musicbar.h  searchBar.c  searchBar.h  search_bar.c  search_bar.h  upload.c  upload.h
src/view/main_view/: intro_view.c  intro_view.h  mainboard_view.c  mainboard_view.h  signin_view.c  signin_view.h  signup_view.c
src/view/properties/: selection_menu.css  sign_in.css  sign_up.css
